add changes codes

--- a/index.html
+++ b/index.html
@@ -8,52 +8,56 @@
 </head>
 <body>
   <div class="container">
-    <div class="input"></div>
-    <div class="opertors"><button class="add">+</button></div>
-    <div class="opertors"><button class="minus">-</button></div>
-    <div class="opertors"><button class="multiplication">*</button></div>
-    <div class="opertors"><button class="divison">/</button></div>
-    <div class="numbers">
-      <button class="one" value="1">1</button>
+    <div class="display">
+      <p class="result"></p>
+      <p class="input-text"></p>
     </div>
-    <div class="numbers">
-      <button class="two" value="2">2</button>
+    <div class="addOperator"><button class="add operator input" value="+">+</button></div>
+    <div class="minusOperator"><button class="minus operator input" value="-">-</button></div>
+    <div class="multiplicationOperator"><button class="multiplication operator input" value="x">x</button></div>
+    <div class="divisonOpertors"><button class="divison operator input" value="÷">÷</button></div>
+    <div class="numberSeven">
+      <button class="seven number input" value="7">7</button>
     </div>
-    <div class="numbers">
-      <button class="three" value="3">3</button>
+    <div class="numberEight">
+      <button class="eight number input" value="8">8</button>
     </div>
-    <div class="numbers">
-      <button class="four" value="4">4</button>
+    <div class="numberNine">
+      <button class="nine number input" value="9">9</button>
     </div>
-    <div class="numbers">
-      <button class="five" value="5">5</button>
+    <div class="numberFour">
+      <button class="four number input" value="4">4</button>
     </div>
-    <div class="numbers">
-      <button class="six" value="6">6</button>
+    <div class="numberFive">
+      <button class="five number input" value="5">5</button>
     </div>
-    <div class="numbers">
-      <button class="seven" value="7">7</button>
+    <div class="numberSix">
+      <button class="six number input" value="6">6</button>
     </div>
-    <div class="numbers">
-      <button class="eight" value="8">8</button>
+    <div class="numberOne">
+      <button class="one number input" value="1">1</button>
     </div>
-    <div class="numbers">
-      <button class="nine" value="9">9</button>
+    <div class="numberTwo">
+      <button class="two number input" value="2">2</button>
     </div>
-    <div class="numbers">
-      <button class="zero" value="0">0</button>
+    <div class="numberThree">
+      <button class="three number input" value="3">3</button>
+    </div>
+    <div class="numberZero">
+      <button class="zero number input" value="0">0</button>
     </div>
     <div class="dot">
-      <button class="deciaml-dot">.</button>
+      <button class="deciaml-dot number input" value=".">.</button>
     </div>
     <div class="clear">
-      <button class="clear">C</button>
+      <button class="clear number input" value="C">C</button>
     </div>
     <div class="equal">
-      <button class="equal-operator">=</button>
+      <button class="equal-operator input" value="=">=</button>
     </div>
-
-    <script src="./script.js"></script>
   </div>
+
+
+  <script src="./script.js"></script>
 </body>
 </html>
